--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "type": "module",
     "dependencies": {
+        "file-saver": "^2.0.5",
+        "jszip": "^3.10.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "webextension-polyfill": "^0.12.0"
@@ -25,6 +27,7 @@
         "@crxjs/vite-plugin": "^2.0.0-beta.31",
         "@tailwindcss/vite": "^4.0.8",
         "@types/chrome": "^0.0.304",
+        "@types/file-saver": "^2.0.7",
         "@types/node": "^22.13.1",
         "@types/react": "^19.0.9",
         "@types/react-dom": "^19.0.4",
