--- a/package.json
+++ b/package.json
@@ -17,24 +17,20 @@
     },
     "type": "module",
     "dependencies": {
-        "file-saver": "^2.0.5",
+        "comlink": "^4.4.2",
         "jszip": "^3.10.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "uuid": "^11.1.0",
         "webextension-polyfill": "^0.12.0"
     },
     "devDependencies": {
         "@crxjs/vite-plugin": "^2.0.0-beta.31",
         "@tailwindcss/vite": "^4.0.8",
         "@types/chrome": "^0.0.304",
-        "@types/file-saver": "^2.0.7",
         "@types/node": "^22.13.1",
-        "@types/react": "^19.0.9",
-        "@types/react-dom": "^19.0.4",
+        "@types/uuid": "^10.0.0",
         "@types/webextension-polyfill": "^0.12.2",
         "@typescript-eslint/eslint-plugin": "^7.8.0",
         "@typescript-eslint/parser": "^7.18.0",
-        "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.21.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-import": "^2.31.0",
