feat: 优化滚动模式的获取图片逻辑，添加禁止清除console.log

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,11 @@
             "matches": ["*://*.nhentai.net/*"],
             "js": ["src/index.ts"],
             "css": ["contentStyle.css"]
+        },
+        {
+            "matches": ["*://*.nhentai.net/*"],
+            "js": ["src/utils/clearConsole.ts"],
+            "run_at": "document_start"
         }
     ],
     "web_accessible_resources": [
