--- a/package.json
+++ b/package.json
@@ -24,25 +24,33 @@
     },
     "devDependencies": {
         "@crxjs/vite-plugin": "^2.0.0-beta.31",
+        "@eslint/js": "^9.23.0",
         "@tailwindcss/vite": "^4.0.8",
-        "@types/chrome": "^0.0.304",
+        "@types/chrome": "0.0.313",
         "@types/node": "^22.13.1",
         "@types/uuid": "^10.0.0",
         "@types/webextension-polyfill": "^0.12.2",
-        "@typescript-eslint/eslint-plugin": "^7.8.0",
-        "@typescript-eslint/parser": "^7.18.0",
-        "eslint": "^9.21.0",
+        "@typescript-eslint/eslint-plugin": "8.28.0",
+        "@typescript-eslint/parser": "8.28.0",
+        "@typescript-eslint/typescript-estree": "^8.28.0",
+        "@typescript-eslint/utils": "^8.28.0",
+        "eslint": "9.23.0",
         "eslint-config-prettier": "^10.0.1",
+        "eslint-config-standard": "^17.1.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-n": "17.17.0",
+        "eslint-plugin-promise": "7.2.1",
         "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^5.1.0",
         "fs-extra": "^11.3.0",
+        "globals": "^16.0.0",
         "nodemon": "^3.1.9",
         "sass": "^1.85.1",
         "tailwindcss": "^4.0.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3",
+        "typescript-eslint": "^8.28.0",
         "vite": "^6.1.0",
         "vite-tsconfig-paths": "^5.1.4"
     },
