--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
         "webextension-polyfill": "^0.12.0"
     },
     "devDependencies": {
-        "@crxjs/vite-plugin": "^2.0.0-beta.31",
+        "@crxjs/vite-plugin": "^2.0.2",
         "@eslint/js": "^9.23.0",
         "@tailwindcss/vite": "^4.0.8",
-        "@types/chrome": "0.0.313",
-        "@types/node": "^22.13.1",
+        "@types/chrome": "^0.0.332",
+        "@types/node": "^24.0.13",
+        "@types/streamsaver": "^2.0.5",
         "@types/uuid": "^10.0.0",
         "@types/webextension-polyfill": "^0.12.2",
         "@typescript-eslint/eslint-plugin": "8.28.0",
